--- a/index.html
+++ b/index.html
@@ -1,138 +1,86 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Happy Birthday bby ❤️</title>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap');
-
-  body {
-    margin: 0;
-    height: 100vh;
-    background: radial-gradient(circle at top left, #111, #000);
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Poppins', sans-serif;
-  }
-
-  .container {
-    position: relative;
-    text-align: center;
-    padding: 2rem;
-    border: 2px solid rgba(255, 215, 0, 0.5);
-    border-radius: 20px;
-    box-shadow: 0 0 25px rgba(255, 215, 0, 0.3);
-    background: rgba(0, 0, 0, 0.6);
-    color: #fff;
-    max-width: 600px;
-    width: 90%;
-    animation: fadeIn 3s ease-in forwards;
-    display: none;
-  }
-
-  h1 {
-    font-family: 'Great Vibes', cursive;
-    color: gold;
-    font-size: 2.5em;
-    margin-bottom: 0.6em;
-  }
-
-  p {
-    line-height: 1.7;
-    font-size: 1.2em;
-    color: #fceabb;
-  }
-
-  @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(30px); }
-    to { opacity: 1; transform: translateY(0); }
-  }
-
-  .heart, .sparkle {
-    position: absolute;
-    pointer-events: none;
-    animation: floatUp linear infinite;
-    opacity: 0.6;
-  }
-
-  @keyframes floatUp {
-    0% {
-      transform: translateY(0) scale(1);
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Happy Birthday ❤️</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      background: radial-gradient(circle at center, #000000 40%, #1a001f 100%);
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      overflow: hidden;
+    }
+    .text {
+      text-align: center;
+      font-size: 1.8rem;
+      line-height: 1.6;
       opacity: 0;
+      animation: fadeIn 3s ease-in-out forwards;
     }
-    10% {
-      opacity: 1;
+    @keyframes fadeIn {
+      to { opacity: 1; }
     }
-    100% {
-      transform: translateY(-120vh) scale(0.8);
-      opacity: 0;
+    .heart {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background: pink;
+      transform: rotate(45deg);
+      animation: float 5s infinite ease-in-out;
     }
-  }
+    .heart::before,
+    .heart::after {
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background: pink;
+      border-radius: 50%;
+    }
+    .heart::before { top: -10px; left: 0; }
+    .heart::after { left: -10px; top: 0; }
 
-  #overlay {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: black;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Poppins', sans-serif;
-    z-index: 1000;
-    transition: opacity 1s ease;
-  }
-</style>
+    @keyframes float {
+      0% { transform: translateY(0) scale(1) rotate(45deg); opacity: 1; }
+      100% { transform: translateY(-200px) scale(1.5) rotate(45deg); opacity: 0; }
+    }
+  </style>
 </head>
 <body>
-  <div id="overlay">
-    <h2>🎵 Tap to start the magic 💖</h2>
-    <p style="font-size:0.9em;opacity:0.7;">(Music will play automatically)</p>
+  <div class="text">
+    <p>You are the most beautiful gift in my life😚.<br>
+    You’re my favorite person, my safe place, and my sweetest feeling 🥰.<br>
+    I hope today gives you as much happiness as you give me every single day 💝.</p>
   </div>
 
-  <div class="container">
-    <h1>Happy Birthday bby ❤️</h1>
-    <p>
-      You are the most beautiful gift in my life 😚.<br>
-      You’re my favorite person, my safe place, and my sweetest feeling 🥰.<br>
-      I hope today gives you as much happiness as you give me every single day 💝.
-    </p>
-  </div>
-
-  <audio id="bgMusic" loop>
-    <source src="http://sndup.net/f3vx5/dl" type="audio/mp3">
+  <!-- Music autoplay -->
+  <audio id="bgmusic" autoplay loop>
+    <source src="song.mp3" type="audio/mp3">
   </audio>
 
   <script>
-    document.getElementById("overlay").addEventListener("click", function() {
-      const overlay = this;
-      const music = document.getElementById("bgMusic");
-      const container = document.querySelector(".container");
+    // create floating hearts
+    function createHeart() {
+      const heart = document.createElement("div");
+      heart.className = "heart";
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.animationDuration = Math.random() * 3 + 3 + "s";
+      document.body.appendChild(heart);
+      setTimeout(() => heart.remove(), 5000);
+    }
+    setInterval(createHeart, 500);
 
-      overlay.style.opacity = "0";
-      setTimeout(() => overlay.remove(), 1000);
-
-      container.style.display = "block";
-      music.play().catch(() => {
-        alert("Please tap again to allow the music to play 🎶");
-      });
-
-      // Floating hearts & sparkles
-      const colors = ['#FFD700', '#E6BE8A', '#FFF8DC', '#FFC107'];
-      for (let i = 0; i < 20; i++) {
-        const el = document.createElement('div');
-        el.className = Math.random() > 0.5 ? 'heart' : 'sparkle';
-        el.style.left = Math.random() * 100 + 'vw';
-        el.style.animationDuration = 10 + Math.random() * 10 + 's';
-        el.style.fontSize = Math.random() > 0.5 ? '16px' : '8px';
-        el.style.color = colors[Math.floor(Math.random() * colors.length)];
-        el.innerHTML = el.className === 'heart' ? '❤' : '✨';
-        document.body.appendChild(el);
-      }
+    // resume audio on user tap (some browsers block autoplay)
+    document.addEventListener('click', () => {
+      const music = document.getElementById('bgmusic');
+      music.play().catch(() => {});
     });
   </script>
 </body>
