--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Happy Birthday bby ❤️</title>
+<title>Happy Birthday ❤️</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap');
 
@@ -106,11 +106,11 @@
 
   <!-- Main content -->
   <div class="container">
-    <h1>Happy Birthday bby ❤️</h1>
+    <h1>Happy Birthday ❤️</h1>
     <p>
-      You are the most beautiful gift in my life 😚.<br>
-      You’re my favorite person, my safe place, and my sweetest feeling 🥰.<br>
-      I hope today gives you as much happiness as you give me every single day 💝.
+      Dear sister, I want to remind you how much you are loved and appreciated. 😇 <br>
+      You bring so much joy and laughter into our lives, and I am grateful for every moment we share together. 🥰 <br>
+      Wishing you a birthday filled with love, laughter, and all your heart desires! 💝<br>
     </p>
   </div>
 
@@ -147,3 +147,4 @@
   </script>
 </body>
 </html>
+
